--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.8.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.browser:browser:1.3.0'
+    implementation 'io.paperdb:paperdb:2.7.1'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.github.rey5137:material:1.3.1'
     implementation 'com.google.firebase:firebase-core:16.1.0'
