--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Oops">
-        <activity android:name=".april"></activity>
+        <activity android:name=".retailer.RetailerAddCategory"></activity>
+        <activity android:name=".wholesaler.subcats.WholesalerReadymade" />
+        <activity android:name=".wholesaler.subcats.WholesalerDairy" />
+        <activity android:name=".wholesaler.subcats.WholesalerFruits" />
+        <activity android:name=".wholesaler.subcats.WholesalerVegetables" />
+        <activity android:name=".wholesaler.WholesalerSubActivity" />
+        <activity android:name=".retailer.RetailerHomeActivity" />
+        <activity android:name=".wholesaler.WholesalerHomeActivity" />
+        <activity android:name=".customer.CustomerHomeActivity" />
+        <activity android:name=".april" />
         <activity android:name=".otppage" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".RegisterActivity" />
@@ -23,8 +32,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
     </application>
 
 </manifest>
