--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,10 @@ dependencies {
     implementation 'com.github.rey5137:material:1.3.1'
     implementation 'com.google.firebase:firebase-core:16.1.0'
     implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
     implementation 'com.google.firebase:firebase-database:16.1.0'
    implementation 'com.google.firebase:firebase-storage:17.0.0'
     implementation "androidx.cardview:cardview:1.0.0"
