--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'io.paperdb:paperdb:2.7.1'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.firebase:firebase-messaging:10.2.6'
     implementation 'com.github.rey5137:material:1.3.1'
     implementation 'com.google.firebase:firebase-core:16.1.0'
     implementation 'com.google.firebase:firebase-auth'
