--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -15,8 +19,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Oops"
+
         tools:replace="android:theme">
-        <activity android:name=".customer.CustomerCategorySearchActivity"></activity>
+        <activity android:name=".GoogleMapActivity"></activity>
+        <activity android:name=".customer.CustomerCategorySearchActivity" />
         <activity android:name=".customer.CustomerCategoryActivity" />
         <activity android:name=".retailer.RetailerMaintainActivity" />
         <activity android:name=".customer.SearchProductsActivity" />
@@ -56,7 +62,12 @@
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
+            android:value="@string/facebook_app_id"
+            />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAA5CuIidACA6M58cTXQKBlFv6TDmQibIQ"/>
+
     </application>
 
 </manifest>
