--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
@@ -19,9 +19,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Oops"
-
         tools:replace="android:theme">
-        <activity android:name=".GoogleMapActivity"></activity>
+        <activity android:name=".customer.CustomerOrderActivity"></activity>
+        <activity android:name=".GoogleMapActivity" />
         <activity android:name=".customer.CustomerCategorySearchActivity" />
         <activity android:name=".customer.CustomerCategoryActivity" />
         <activity android:name=".retailer.RetailerMaintainActivity" />
@@ -62,12 +62,10 @@
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"
-            />
+            android:value="@string/facebook_app_id" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAA5CuIidACA6M58cTXQKBlFv6TDmQibIQ"/>
-
+            android:value="AIzaSyAA5CuIidACA6M58cTXQKBlFv6TDmQibIQ" />
     </application>
 
 </manifest>
