--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
     <application
         android:allowBackup="true"
@@ -20,7 +23,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Oops"
         tools:replace="android:theme">
-        <activity android:name=".retailer.DeliveredActivity"></activity>
+        <activity android:name=".AddQueryActivity"></activity>
+        <activity android:name=".QueriesActivity" />
+        <activity android:name=".retailer.RetConfirmFinalOrderActivity" />
+        <activity android:name=".retailer.RetCartActivity" />
+        <activity android:name=".retailer.RetProductDetailsActivity" />
+        <activity android:name=".FeedbackActivity" />
+        <activity android:name=".retailer.DeliveredActivity" />
         <activity android:name=".customer.PlacedActivity" />
         <activity android:name=".retailer.RetailerProductsActivity" />
         <activity android:name=".wholesaler.WholesalerNewOrderActivity" />
